@@ -1,5 +1,8 @@
 Changes in primecount-7.13, 2024-04-08
 
+* Delete ci-sage.yml, it has not been updated in 3 years and I
+  don't want to maintain it. I feel like this CI script should
+  be part of SageMath, not primecount.
 * Added AVX512 runtime dispatching for x86 CPUs.
 * CMakeLists.txt: New WITH_MULTIARCH option (default ON).
 * Sieve_count.cpp: New AVX512 popcount algorithm for x86 CPUs.
